fix buttons add/remove bugs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,6 +67,7 @@
         "codecvt": "cpp",
         "cstring": "cpp",
         "future": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "qaudiodecoder": "cpp"
     }
 }
