--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
         "cstring": "cpp",
         "future": "cpp",
         "iostream": "cpp",
-        "qaudiodecoder": "cpp"
+        "qaudiodecoder": "cpp",
+        "qiodevice": "cpp"
     }
 }
